Using crossbar to serve Django

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,11 +46,11 @@
             <li><a href="{% url 'my_profile' %}">My profile</a></li>
           </ul>
           <ul class="nav navbar-nav">
-            <li><a href="">My challenges</a></li>
+            <li><a href="">My matches</a></li>
           </ul>
           {% endif %}
           <ul class="nav navbar-nav">
-            <li><a href="">Search for challenges</a></li>
+            <li><a href="">Search for matches</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right header-top">
